syntax = "proto3";

package statistics;

option go_package = "statistics_service/pkg/kafka_pb";

message ViewEvent {
  int64 userId = 1;
  int64 postId = 2;
  int64 authorId = 3;
}

message LikeEvent {
  int64 userId = 1;
  int64 postId = 2;
  int64 authorId = 3;
}

message Event {
  oneof event_type {
    ViewEvent view_event = 1;
    LikeEvent like_event = 2;
  }
}