syntax = "proto3";

package statistics;

option go_package = "statistics_service/pkg/pb";

message PostStatsRequest {
  string postId = 1;
}

message PostStatsResponse {
  int32 viewCount = 1;
  int32 likeCount = 2;
}

message TopPostsRequest {
  string type = 1; // "views" or "likes"
}

message Post {
  string id = 1;
  string author_id = 2;
  int32 count = 3; // views or likes
}

message TopPostsResponse {
  repeated Post posts = 1;
}

message TopUsersRequest {
}

message User {
  string id = 1;
  int32 likes_count = 2;
}

message TopUsersResponse {
  repeated User users = 1;
}

service StatisticsService {
  rpc GetPostStats(PostStatsRequest) returns (PostStatsResponse);
  rpc GetTopPosts(TopPostsRequest) returns (TopPostsResponse);
  rpc GetTopUsers(TopUsersRequest) returns (TopUsersResponse);
}
